cncProd/force-app/main/default/objects/Model_Alert_Subscription__c/Model_Alert_Subscription__c.object-meta.xml
<CustomObject>
    <description>Model Alert Subscription Transaction Data for Republic Auto</description>
    <label>Model Alert Subscription</label>
    <nameField>
        <displayFormat>MAS-{00000000}</displayFormat>
        <label>Model Subscribed Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Model Alert Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>