cncProd/force-app/main/default/objects/Model_Alert_Subscription__c/fields/Person_Account_Profiling__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Profiling__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person Account Profiling</label>
    <referenceTo>Person_Account_Profiling__c</referenceTo>
    <relationshipLabel>Model Alert Subscriptions</relationshipLabel>
    <relationshipName>Model_Alert_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>