cncProd/force-app/main/default/objects/Model_Alert_Subscription__c/fields/Sales_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Sales_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Opportunity</label>
    <referenceTo>Sales_Opportunity__c</referenceTo>
    <relationshipName>RA_Model_Alert_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>