cncProd/force-app/main/default/objects/Model_Alert_Subscription__c/fields/Subscription_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Expiry_Date__c</fullName>
    <label>Subscription Expiry Date</label>
    <type>Date</type>
</CustomField>