cncProd/force-app/main/default/objects/Model_Alert_Subscription__c/recordTypes/RA_Model_Alert_Subcription_RT.recordType-meta.xml
<RecordType>
    <fullName>RA_Model_Alert_Subcription_RT</fullName>
    <active>true</active>
    <label>RA Model Alert Subcription RT</label>
</RecordType>