cncProd/force-app/main/default/objects/Model_Alert_Subscription__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Person_Account_Profiling__c</columns>
    <columns>Sales_Opportunity__c</columns>
    <columns>Subscription_Status__c</columns>
    <columns>Subscription_Expiry_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>